tests/baselines/reference/indexSignatureTypeInference.errors.txt
indexSignatureTypeInference.ts(16,27): error TS2454: Variable 'numberMap' is used before being assigned.
indexSignatureTypeInference.ts(17,27): error TS2454: Variable 'stringMap' is used before being assigned.
indexSignatureTypeInference.ts(18,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'v1' must be of type 'Function[]', but here has type 'unknown[]'.
indexSignatureTypeInference.ts(18,27): error TS2345: Argument of type 'NumberMap<Function>' is not assignable to parameter of type 'StringMap<unknown>'.
  Index signature for type 'string' is missing in type 'NumberMap<Function>'.
indexSignatureTypeInference.ts(18,27): error TS2454: Variable 'numberMap' is used before being assigned.
indexSignatureTypeInference.ts(19,27): error TS2454: Variable 'stringMap' is used before being assigned.


==== indexSignatureTypeInference.ts (6 errors) ====
    interface NumberMap<T> {
        [index: number]: T;
    }
    
    interface StringMap<T> {
        [index: string]: T;
    }
    
    declare function numberMapToArray<T>(object: NumberMap<T>): T[];
    declare function stringMapToArray<T>(object: StringMap<T>): T[];
    
    var numberMap: NumberMap<Function>;
    var stringMap: StringMap<Function>;
    
    var v1: Function[];
    var v1 = numberMapToArray(numberMap);  // Ok
                              ~~~~~~~~~
!!! error TS2454: Variable 'numberMap' is used before being assigned.
    var v1 = numberMapToArray(stringMap);  // Ok
                              ~~~~~~~~~
!!! error TS2454: Variable 'stringMap' is used before being assigned.
    var v1 = stringMapToArray(numberMap);  // Error expected here
        ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'v1' must be of type 'Function[]', but here has type 'unknown[]'.
!!! related TS6203 indexSignatureTypeInference.ts:15:5: 'v1' was also declared here.
                              ~~~~~~~~~
!!! error TS2345: Argument of type 'NumberMap<Function>' is not assignable to parameter of type 'StringMap<unknown>'.
!!! error TS2345:   Index signature for type 'string' is missing in type 'NumberMap<Function>'.
                              ~~~~~~~~~
!!! error TS2454: Variable 'numberMap' is used before being assigned.
    var v1 = stringMapToArray(stringMap);  // Ok
                              ~~~~~~~~~
!!! error TS2454: Variable 'stringMap' is used before being assigned.
    